--- a/src/app/baitap3/baitap3.component.html
+++ b/src/app/baitap3/baitap3.component.html
@@ -42,7 +42,7 @@
               </tr>
               <tr>
                   <td colspan="1">Total Price</td>
-                  <td colspan="5" class="right">508900</td>
+                  <td colspan="5" class="right">{{TongTien()}}</td>
               </tr>
             </tbody>
         </table>
