--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<h3>Bài 1</h3>
-<app-baitap1></app-baitap1>
-<h3>Bài 2</h3>
-<app-baitap2></app-baitap2>
-<h3>Bài 3</h3>
-<app-baitap3></app-baitap3>
-<h3>Phụ lục Demo</h3>
-<app-producer></app-producer>
-<app-list-product></app-list-product>
-<app-supervisor></app-supervisor>
+<router-outlet></router-outlet>
