--- a/src/app/producer/producer.component.html
+++ b/src/app/producer/producer.component.html
@@ -22,9 +22,9 @@
             </div>
             <div class="col-lg-4">
                 Leaf Rake<br>
-                GDN-0011<br>
+                gdn-0011<br>
                 Leaf rake with 48-inch wooden<br>handle.<br>
-                March 19,2016<br>
+                March 19,2016}<br>
                 $19.95<br>
                 3.2
             </div>
