Cập nhật và up lab5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,53 @@
+<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">HAITC</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" [routerLink]="['']">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/bai1']">Bài 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/bai2']">Bài 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/bai3']">Bài 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/list-product']">ListProduct</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/list-stusent']">ListStudent</a>
+          </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Lab5
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" [routerLink] = "['/hcn']">Bài 1.1</a>
+                <a class="dropdown-item" [routerLink] = "['/thuong']">Bài 1.2</a>
+                <a class="dropdown-item" [routerLink] = "['/xeploai']">Bài 2</a>
+                <a class="dropdown-item" [routerLink] = "['/drink']">Bài 3</a>
+                <a class="dropdown-item" [routerLink] = "['/check']">Bài 4</a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
 <router-outlet></router-outlet>
+</div>
+
+
+
+
+
+
+
