--- a/src/app/listproduct/listproduct.component.html
+++ b/src/app/listproduct/listproduct.component.html
@@ -1,56 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <div class="card">
-        <div class="card-header">
-          List Product
-        </div>
-        <div class="card-body">
-            <form class="form-horizontal" action="/action_page.php">
-                <div class="form-group row">
-                    <label class="control-label col-sm-2" for="fil">Filter by:</label>
-                    <div class="col-sm-10">
-                        <input type="fil" class="form-inline" id="fil">
-                    </div>
-                </div>
-            </form>
-            <h3><b>Filter by:</b></h3><br>
-            <table>
-                <thead>
-                    <tr>
-                        <th><button class="btn btn-primary"(click) ='AnHien()'>Hien image</button></th>
-                        <th>Poduct</th>
-                        <th>Code</th>
-                        <th>Available</th>
-                        <th>Price</th>
-                        <th>5 Star Rating</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor='let a of ListProduct'>
-                        <td><img src="assets\{{a.imageUrl}}" class="image" *ngIf='isShow'></td>
-                        <td>
-                            <a [routerLink]="['/products',a.productId]" >
-                                {{a.productName}}
-                            </a>
-                        </td>
-                        <td>{{a.productCode}}</td>
-                        <td>{{a.relessDate}}</td>
-                        <td>{{a.price}}</td>
-                        <td><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="card-footer">
-            <i class="fa fa-arrow-left"></i> Back
-        </div>
+<div class="card">
+  <div class="card-header">
+    List Product
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-lg-2">
+        <p class="card-text">Filter by: </p>
+      </div>
+      <div class="col-lg-2">
+        <input type="password" class="form-control" id="inputPassword">
+      </div>
     </div>
-</body>
-</html>
+    <h3><b>Filtered by:</b></h3>
+      
+    <table class="Table table-bordered">
+      <thead>
+        <tr>
+          <th scope="col"><button type="button" class="btn btn-primary"(click) = 'AnHien()'>Hien Image</button></th>              
+          <th scope="col">Product</th>
+          <th scope="col">Code</th>
+          <th scope="col">Date</th>
+          <th scope="col">Available</th>
+          <th scope="col">Price</th>
+          <th scope="col">Amount</th>
+          <th scope="col">5 Star Rating</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor='let a of listproduct'>
+          <td scope="col"><img src="assets\{{a.imageUrl}} " width="100px" *ngIf='isShow'></td>
+          <th scope="col"><a [routerLink] = "['/product',a.productId]">{{a.productName}}</a></th>
+          <td scope="col">{{a.productCode}}</td>
+          <td scope="col">{{a.releaseDate}}</td>
+          <td scope="col">{{a.description}}</td>
+          <td scope="col">{{a.price}}</td>
+          <td scope="col">{{a.amount}}</td>
+          <td scope="col"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-empty"></i></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
