--- a/src/app/baitap3/baitap3.component.html
+++ b/src/app/baitap3/baitap3.component.html
@@ -28,7 +28,7 @@
             <tbody>
               <tr *ngFor='let a of MyCard'>
                 <td>{{a.ID}}</td>
-                <td><img src="assets\{{a.Image}}" class="ImgCard"></td>
+                <td><img src="assets\img\{{a.Image}}" class="ImgCard"></td>
                 <td>{{a.Name}}</td>
                 <td>{{a.Price}}</td>
                 <td>{{a.Quality}}
