--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -21,7 +21,7 @@
                 <p>3.2</p>
             </div>
             <div class="col-lg-6">
-                <img src="assets/leaf rake.jpg"/>
+                <img src="assets/img/leaf rake.jpg"/>
             </div>
         </div>
     </div>
