--- a/src/app/supervisor/supervisor.component.html
+++ b/src/app/supervisor/supervisor.component.html
@@ -32,7 +32,7 @@
                 </nav>
             </div>
             <div class="MyIcon">
-                <img src="assets\icon.png">
+                <img src="assets\img\icon.png">
                 <h2>Supervisor</h2>
                 <nav class="nav flex-column">
                     <a class="nav-link active" href="#"><i class="fa fa-home"></i> Home</a>
