--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,26 @@
-.imgcart{
-    width: 50px;
-    height: 50px;
+.product {
+    width: 100%;
+    clear: both;
+    margin:10px;
 }
+.product img {
+    width:10%;
+    float: left;
+}
+.product content {
+    width:80%;
+    float:right;
+}
+.txt {
+    color: chocolate;
+}
+.link {
+  color:rgb(30, 138, 210);
+}
+.text {
+    color: royalblue;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
   }
@@ -49,13 +68,7 @@ body {
       height: auto;
     }
   }
-  .link {
-    color:rgb(30, 138, 210);
-  }
 
   .title {
     color:rgb(221, 66, 113);
-  }
-  .text{
-    color: chocolate;
   }
